--- a/css/styles.css
+++ b/css/styles.css
@@ -490,3 +490,92 @@ margin-bottom: 72px;
 .footer_link:focus {
     background-color: #31d0aa;
 } 
+
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: overlay 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.modal {
+    position: absolute;
+    width: 408px;
+    min-height: 584px;
+    background-color: #fcfcfc;
+    border-radius: 4px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); scale(1);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250 ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close {
+position: absolute;
+top: 24px;
+right: 24px;
+width: 24px;
+height: 24px;
+border-radius: 50%;
+padding: 0;
+cursor: pointer;
+border: 1px solid rgba(0, 0, 0, 0.1);
+background-color: #E7E9FC;
+display: flex;
+justify-content: center;
+align-items: center;
+transition: background-color 250 ms cubic-bezier(0.4, 0, 0.2, 1), border 250 ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+
+.close {
+    transition: fill 250 ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.modal-close:hover,
+.modal-close:focus {
+background-color: #404BBF;
+border: none;
+}
+
+.modal-close:hover > .close,
+.modal-close:focus > .close {
+    fill: #fff;
+}
+
+.modal-title {
+    font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+padding-top: 72px;
+padding-right: 24px;
+padding-left: 24px;
+margin-bottom: 16px;
+}
+
+.modal-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background: #fcfcfc;
+
+    
+}
