--- a/css/styles.css
+++ b/css/styles.css
@@ -579,7 +579,7 @@ border: none;
 }
 
 .modal-input {
-    width: 100%;
+    width: 100%
     height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
