--- a/css/styles.css
+++ b/css/styles.css
@@ -914,5 +914,148 @@ input::placeholder {
     fill: #fff;
 }
 
+.footer {
+    background: #2e2f42;
+    padding: 100px 0;
+    display: flex;
+}
+
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-lt {
+    margin-right: 120px;
+}
+
+.container-logo {
+    display: inline-block;
+    margin-bottom: 16px;
+}
+
+.footer-logo-part {
+    color: #f4f4fd;
+}
+
+.footer-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    max-width: 264px;
+    margin-bottom: 16px;
+}
+
+.footer-icons-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+}
+
+.footer-list-icons {
+    display: flex;
+    gap: 16px;
+}
+    
+.footer-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #fff;
+}
+
+.footer-item-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    fill: #fff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.footer-part {
+    fill: #f4f4fd;
+}
+
+.footer-link:hover, 
+.footer-link:focus {
+    background-color: #31d0aa;
+}
+
+.subscribe-footer {
+    margin-left: auto;
+}
+
+.subscribe-form {
+    display: flex;
+    gap: 24px;
+}
+
+.subscribe {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    /* padding-bottom: 16px; */
+    margin-bottom: 16px;
+}
+
+.subscribe-input {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff; 
+    background-color: transparent; 
+    font-size: 12px; 
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
+    border-radius: 4px;
+    color: #ffffff;
+}
+
+input::placeholder {
+    color: #ffffff; 
+}
+
+.subscribe-button {
+    min-width: 165px;
+    height: 40px; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5; 
+    letter-spacing: 0.04em; 
+    color: #ffffff; 
+    cursor: pointer;
+    background-color: #4D5AE5; 
+    border: none; 
+    border-radius: 4px; 
+}
+
+.subscribe-icon {
+    margin-left: 16px;
+    fill: #fff;
+}
+
 
 
