--- a/css/styles.css
+++ b/css/styles.css
@@ -764,12 +764,10 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-color: #4D5AE5;
 }
 
-.checkbox-icon { 
+.check-box-icon { 
     fill: #f4f4fd;
 }
 
-
-/* footer */
 
 .footer {
     background: #2e2f42;
